# pathclaw

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  DOCUMENTATION.md  LICENSE  MANUAL.md  README.md
backend/: pyproject.toml
backend/pathclaw/: __init__.py  cli.py  telegram_bot.py
backend/pathclaw/api/: agent_guardrails.py  app.py  llm_providers.py  planner.py  validators.py
backend/pathclaw/api/routes/: _eta.py  artifacts.py  chat.py  config_space.py  datasets.py  evaluation.py  features.py  folders.py  gdc.py  ihc.py  plugins.py  preprocess.py  queue.py  tasks.py  telegram.py  tileserver.py  training.py  upload.py  workspace_fs.py
backend/pathclaw/evaluation/: evaluator.py  heatmap.py
backend/pathclaw/genomics/: __init__.py  biomarker.py  cbioportal.py  expression.py  label_extraction.py  multi_omic.py  parsers.py  survival.py  visualization.py
backend/pathclaw/ihc/: __init__.py  core.py  patch_labels.py  rules.py  score.py
backend/pathclaw/plugins/: __init__.py  cellpose.py  mammoth.py  registry.json
backend/pathclaw/preprocessing/: _extract_worker.py  feature_extraction.py  pipeline.py
backend/pathclaw/static/: app.js  index.html
backend/pathclaw/training/: lora_finetuner.py  mammoth_configs.py  patch_trainer.py  plot_builder.py  seg_trainer.py  trainer.py
backend/pathclaw/training/models/: __init__.py  _utils.py  abmil.py  clam.py  dsmil.py  meanpool.py  patch_mlp.py  rrtmil.py  seg_hovernet.py  seg_unet.py  transmil.py  wikg.py
docs/: AGENT_TOOLS.md  DEVELOPMENT.md  PLUGIN_DEV.md  PathClaw-Manual.docx  SECURITY.md  TROUBLESHOOTING.md
scripts/: build_manual.py  dump_tools.py
workspace/: AGENTS.md  SKILLS_SUMMARY.md  (+3 more)
(+18 files in other folders)
